-----18.12-----

New Features:
	* Add Markdown entry type
	* Animated highlighting of the currently calculated command entry
	* Visualization of pending command entries (queued, but not being calculated yet)
	* Allow to format command entries (background color, foreground color, font properties)
	* Allow to insert new command entries at arbitrary places in the worksheet by placing the cursor at the desired position and starting typing.
	* For expressions having multiple commands, show the results as independet result objects in the worksheet
	* Add support for opening worksheets by relative paths from console
	* Add support for opening multiple files in one Cantor shell
	* Change the color and the font for when asking for additional information in order to better discriminate from the usual input in the command entry
	* [Maxima] Deal with additional required inputs when fetching help for commands via the '??' operator
	* Added shortcuts for the navigation across the worksheets (Ctrl+PageUp, Ctrl+PageDown)
	* [Julia] Add support for class member autocompletion
	* [Python] Add runtime autocompletion
	* Add action in 'View' submenu for zoom reset.

Bug fixes:
	* BUG 363606 - [Python] Different python sessions shouldn't share the same variables
	* BUG 372075 - [Python] Don't exit Cantor on calling exit() in python sessions
	* BUG 395213 - [R] Add rehighlighting for entries after execution in R backend